branches/0.5/src/objects/ProjectTaskPred__c.object
<CustomObject>
    <fields>
        <fullName>Lag_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lag Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lag_Type__c</fullName>
        <label>Lag Type</label>
        <picklist>
            <picklistValues>
                <fullName>Finish-to-Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start-to-Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finish-to-Finish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start-to-Finish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lag_Unit__c</fullName>
        <label>Lag Unit</label>
        <picklist>
            <picklistValues>
                <fullName>hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <referenceTo>ProjectTask__c</referenceTo>
        <relationshipLabel>Project Task Predecessors (Parent)</relationshipLabel>
        <relationshipName>Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predecessor__c</fullName>
        <label>Predecessor</label>
        <referenceTo>ProjectTask__c</referenceTo>
        <relationshipName>ProjectTaskPred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Project Preds</relationshipLabel>
        <relationshipName>ProjectPreds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Task Predecessor</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Predecessor Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Predecessors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>